# chtc-memory-analyzer

./: .gitignore  .pre-commit-config.yaml  Makefile  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/chtc_memory_analyzer/: __init__.py  cli.py
src/chtc_memory_analyzer/analysis/: __init__.py  memory_analyzer.py  stats.py
src/chtc_memory_analyzer/data/: __init__.py  base.py  csv_source.py  elasticsearch_source.py  htcondor_source.py
src/chtc_memory_analyzer/visualization/: __init__.py  formatters.py  histogram.py
tests/: __init__.py  conftest.py
