[project]
name = "chtc-memory-analyzer"
version = "0.1.0"
description = "Analyze HTCondor job history for memory usage patterns and identify resource over-allocation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ian Ross", email = "iaross@wisc.edu"}
]
keywords = ["htcondor", "htc", "memory", "analysis", "resource-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "htcondor>=24.0.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/iross/chtc-memory-analyzer"
Repository = "https://github.com/iross/chtc-memory-analyzer"
Issues = "https://github.com/iross/chtc-memory-analyzer/issues"

[project.scripts]
chtc-analyze = "chtc_memory_analyzer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chtc_memory_analyzer"]
